--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/text-to-speech": "^5.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "@types/redis": "^4.0.11",
@@ -24,12 +25,14 @@
     "express": "^4.19.2",
     "https": "^1.0.0",
     "module-alias": "^2.2.3",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.6.14",
     "rss-parser": "^3.13.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/jasmine": "^5.1.4",
+    "@types/multer": "^1.4.11",
     "jasmine-core": "^5.1.2",
     "karma": "^6.4.3",
     "karma-chrome-launcher": "^3.2.0",
