--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/text-to-speech": "^5.3.0",
+    "@google/generative-ai": "^0.14.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.2",
     "@types/redis": "^4.0.11",
@@ -24,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "https": "^1.0.0",
+    "marked": "^13.0.2",
     "module-alias": "^2.2.3",
     "multer": "^1.4.5-lts.1",
     "redis": "^4.6.14",
