refactor: remove gemini api key

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ RSS_PROXY_URL=https://dantri.com.vn
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
-GEMINI_API_KEY=AIzaSyCEN8hAO08xyXa6En-aidmEsQoARdlpBm
+GEMINI_API_KEY=
